--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,5 @@
+<!-- templates/home.html -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,6 +12,10 @@
     <h1>
         Hello world FAMOUS!
     </h1>
-    
+    <ul>
+        {% for person in people %}
+        <li>{{ person.fname }} {{ person.lname }}</li>
+        {% endfor %}
+    </ul>
 </body>
 </html>
